Fixed ellipsis issue and column alignment.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -119,11 +119,19 @@
 }
 
 .ngHeaderCell{
-	border-right: 1px solid rgb(212,212,212);
-    border-right-style: solid;
+	border-left: 1px solid rgb(212,212,212);
     position: absolute;
     cursor: pointer;
 }
+
+.ngHeaderCell:first-child{
+	border-left: 0px;
+}
+
+.ngHeaderCell:last-child{
+	border-right: 1px solid rgb(212,212,212);
+}
+
 .ngSortButtonUp {
     position: absolute;
     top: 3px;
@@ -162,7 +170,6 @@
 .ngHeaderText {
     margin-left: 5px;
     white-space: nowrap;
-    display: block;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
@@ -199,14 +206,24 @@
 }
 
 /******** Cells ********/
+
 .ngCell {
-    overflow: hidden;
+    overflow: hidden; 
     position: absolute;
     display: inline;
     white-space: nowrap;
-    border-right: 1px ;
-    border-right-style: inset;
+    /*text-overflow: ellipsis;*/
+	border-left: 1px solid rgb(212,212,212);
 }
+
+.ngCell:first-child{
+	border-left: 0px;
+}
+
+.ngCell:last-child {
+    border-right: 1px solid rgb(212,212,212);
+}
+
 .ngCellText {
 	position: absolute;
 	top: 6px;
